--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-glamor": "^1.6.11",
     "gatsby-plugin-typography": "^1.7.12",
+    "gatsby-source-filesystem": "^1.5.15",
     "glamorous": "^4.11.4",
     "typography-theme-kirkham": "^0.16.3"
+  },
+  "devDependencies": {
+    "eslint": "^4.16.0",
+    "eslint-plugin-react": "^7.6.0"
   }
 }
